src/test/deca/context/invalid/decaObjet/extends/03doubleClassDef.deca
// Description:
//    test avec deux class avec le meme nom
//
// Resultats:
//    03doubleClassDef.deca:13:6:
//
// Historique:
//    cree le 15/06/2022

class A {
}

class A {
}
